Edit project after review