@@ -1,5 +1,4 @@
 plugins {
-    id("java")
     id("application")
     id("se.patrikerdes.use-latest-versions") version "0.2.19"
     id("com.github.ben-manes.versions") version "0.53.0"
@@ -33,19 +32,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:6.0.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     implementation("org.apache.commons:commons-lang3:3.19.0")
     implementation("org.hibernate.orm:hibernate-core:6.6.0.Final")
 }
 
 application { mainClass.set("hexlet.code.App") }
 
-tasks.test {
-    useJUnitPlatform()
-    jvmArgs("--enable-preview")
-}
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("--enable-preview")
